<resources>
    <string name="app_name">Rock_Paper_Scissor_Game</string>
    <string name="start_game">start_game</string>
    <string name="have_a_good_day_friends">have_a_good_day_friends</string>
    <string name="enter_player_name">enter_player_name</string>
    <string name="players_details">players_details</string>
    <string name="version">Rock_Paper_Scissor_Game_V_0.0.5</string>
    <string name="restart">restart</string>
    <string name="draw">Draw</string>
    <string name="please_chose_item">Please Chose Item</string>
</resources>