<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/github_link"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/github"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Project_Link"
            android:layout_width="185dp"
            android:layout_height="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edit_text_border_shape"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="9sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Main_Activity_Players_Details_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins"
            android:text="@string/players_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Project_Link"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Main_Activity_Player_Name_Edit_Text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/edit_text_border_shape"
            android:gravity="center"
            android:hint="@string/enter_player_name"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_Activity_Players_Details_TV"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/Main_Rock_Paper_Scissor_Image_View"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/main_screen_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_Activity_Player_Name_Edit_Text"
            tools:ignore="MissingConstraints" />


        <ImageView
            android:id="@+id/Main_Smile_Image_View"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/smile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_Activity_HaveGoodDay_TV"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Main_Activity_HaveGoodDay_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/have_a_good_day_friends"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Main_Activity_Player_Name_Edit_Text"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Main_Activity_Start_Game_Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/start_button_shape"
            android:elevation="20dp"
            android:text="@string/start_game"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Main_Smile_Image_View"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>